Added reload command + more config options.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ main: com.minegusta.mgpvpworld.main.Main
 name: MGPvPWorld
 version: ${project.version}
 author: janie177
+commands:
+  pvpreload:
+    usage: /pvpreload
+    description: Reload MGPvPWorld.
+    default: op
