--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,8 @@ commands:
     usage: /pvpreload
     description: Reload MGPvPWorld.
     default: op
+  pvp:
+    usage: /PvP
+    description: Teleport to the PvP world.
+    default: false
+    permission: minegusta.pvptele
